# muster-frappe

./: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml
muster/: boot.py  commands.py  hooks.py  install.py  modules.txt  patches.txt  permissions.py  spa_shell.py
muster/adapters/: __init__.py  client.py  context.py  gateway.py  identity.py  run_authority.py
muster/api/: __init__.py  ask.py  browser_session.py  catalog.py  channel.py  development.py  effect_callback.py  evidence.py  mission.py  native_builder.py  onboarding.py  studio.py  surface.py  system.py
muster/automation/: __init__.py  authority.py  builders.py  engine.py  frappe_backend.py  models.py  source_provenance.py  trusted_artifacts.py
muster/change_ir/: __init__.py  executor.py  schema.py  security.py
muster/config/: desktop.py
muster/demo/: __init__.py  bulk.py  customization_ladder_live.py  erpnext.py  evidence.py  frappeverse_baseline.py  native_desk_rbac_evidence.py  plan.py  seed.py  video.py  video_plan.py
muster/desktop_icon/: muster.json
muster/muster/: __init__.py
muster/orchestration/: __init__.py  delete_authorization.py  development.py  effect_lifecycle.py  events.py  form_schema.py  gateway_runtime.py  jobs.py  projection.py  read_plan.py  service.py  source_document_worker.py  source_ingestion.py  studio.py  worker.py  workflow_graph.py  workflow_proposal.py
muster/policy/: __init__.py  (+1 more)
tests_js/: activity_dock.test.cjs  live_work_session.test.cjs  spa_assistant.test.cjs  surface_adapters.test.cjs  workflow_graph.test.cjs  workflow_proposal.test.cjs
(+128 files in other folders)
